tests/baselines/reference/genericCallWithObjectLiteralArguments1.errors.txt
tests/cases/compiler/genericCallWithObjectLiteralArguments1.ts(3,13): error TS2345: Argument of type '{ x: 3; y: ""; }' is not assignable to parameter of type '{ x: 3; y: 3; }'.
  Types of property 'y' are incompatible.
    Type '""' is not assignable to type '3'.
tests/cases/compiler/genericCallWithObjectLiteralArguments1.ts(4,22): error TS2345: Argument of type '{ x: 3; y: ""; }' is not assignable to parameter of type '{ x: number; y: number; }'.
  Types of property 'y' are incompatible.
    Type '""' is not assignable to type 'number'.
tests/cases/compiler/genericCallWithObjectLiteralArguments1.ts(5,22): error TS2345: Argument of type '{ x: 3; y: ""; }' is not assignable to parameter of type '{ x: string; y: string; }'.
  Types of property 'x' are incompatible.
    Type '3' is not assignable to type 'string'.
tests/cases/compiler/genericCallWithObjectLiteralArguments1.ts(6,22): error TS2345: Argument of type '{ x: ""; y: 4; }' is not assignable to parameter of type '{ x: number; y: number; }'.
  Types of property 'x' are incompatible.
    Type '""' is not assignable to type 'number'.
tests/cases/compiler/genericCallWithObjectLiteralArguments1.ts(7,22): error TS2345: Argument of type '{ x: ""; y: 4; }' is not assignable to parameter of type '{ x: string; y: string; }'.
  Types of property 'y' are incompatible.
    Type '4' is not assignable to type 'string'.


==== tests/cases/compiler/genericCallWithObjectLiteralArguments1.ts (5 errors) ====
    function foo<T>(n: { x: T; y: T }, m: T) { return m; }
    // these are all errors
    var x = foo({ x: 3, y: "" }, 4);
                ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: 3; y: ""; }' is not assignable to parameter of type '{ x: 3; y: 3; }'.
!!! error TS2345:   Types of property 'y' are incompatible.
!!! error TS2345:     Type '""' is not assignable to type '3'.
    var x2 = foo<number>({ x: 3, y: "" }, 4); 
                         ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: 3; y: ""; }' is not assignable to parameter of type '{ x: number; y: number; }'.
!!! error TS2345:   Types of property 'y' are incompatible.
!!! error TS2345:     Type '""' is not assignable to type 'number'.
    var x3 = foo<string>({ x: 3, y: "" }, 4); 
                         ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: 3; y: ""; }' is not assignable to parameter of type '{ x: string; y: string; }'.
!!! error TS2345:   Types of property 'x' are incompatible.
!!! error TS2345:     Type '3' is not assignable to type 'string'.
    var x4 = foo<number>({ x: "", y: 4 }, "");
                         ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: ""; y: 4; }' is not assignable to parameter of type '{ x: number; y: number; }'.
!!! error TS2345:   Types of property 'x' are incompatible.
!!! error TS2345:     Type '""' is not assignable to type 'number'.
    var x5 = foo<string>({ x: "", y: 4 }, "");
                         ~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: ""; y: 4; }' is not assignable to parameter of type '{ x: string; y: string; }'.
!!! error TS2345:   Types of property 'y' are incompatible.
!!! error TS2345:     Type '4' is not assignable to type 'string'.